# disunity

./: Cargo.toml  specification.txt
disunity-derive/: Cargo.toml
disunity-derive/src/: lib.rs
disunity-derive/tests/: 01-fails-non-enum.rs  01-fails-non-enum.stderr  01-non-enum.rs  01-non-enum.stderr  02-simple.rs  03-with-fields.rs  04-ignore-unknown-field.rs  04-ignore-unknown-field.stderr  05-invalid-discriminant.stderr  05-invalid-variant-discriminant.rs  05-invalid-variant-discriminant.stderr  06-too-many-attributes.rs  06-too-many-attributes.stderr  06-too-many-variant-attributes.stderr  07-missing-disunity-attribute.rs  07-missing-disunity-attribute.stderr  07-missing-variant-discriminant.stderr  08-missing-discriminant-val.rs  08-missing-discriminant-val.stderr  08-missing-variant-discriminant-val.stderr  09-random-literal-in-attribute.stderr  09-random-literal-in-variant-attribute.rs  09-random-literal-in-variant-attribute.stderr  10-misspell-attribute-list.rs  10-misspell-attribute-list.stderr  10-misspelled-variant-attribute.stderr  11-from-integer.rs  12-from-variant.rs  13-discriminant-type.rs  14-discriminant-type-default.rs  15-invalid-discriminant-type.rs  15-invalid-discriminant-type.stderr  16-invalid-enum-attribute.rs  16-invalid-enum-attribute.stderr  17-too-many-enum-attributes.rs  17-too-many-enum-attributes.stderr  18-misspelled-enum-attribute.rs  18-misspelled-enum-attribute.stderr  mod.rs
src/: error.rs  main.rs  utils.rs
