[package]
name = "disunity-derive"
version = "0.1.0"
edition = "2021"
autotests = false

[lib]
proc-macro = true

[[test]]
name = "tests"
path = "tests/mod.rs"

[dependencies]
proc-macro2 = { version = "1" }
quote = { version = "1" }
syn = { version = "1", features = ["derive"] }

[dev-dependencies]
trybuild = { version = "1", features = ["diff"] }
syn = { version = "1", features = ["extra-traits"] }
